src/c_api.h

typedef void * rwkvmobile_runtime_t;
struct sampler_params {
    float temperature;
    int top_k;
    float top_p;
};
struct supported_batch_sizes {
    int * sizes;
    int length;
};
int rwkvmobile_runtime_eval_chat_with_history_async(rwkvmobile_runtime_t handle, int model_id, const char ** inputs,
    const int num_inputs, const int max_tokens, void (*callback)(const char *, const int, const char *),
    int enable_reasoning, int force_reasoning, int force_lang, int add_generation_prompt
);
int rwkvmobile_runtime_is_generating(rwkvmobile_runtime_t runtime, int model_id);
int rwkvmobile_runtime_set_prompt(rwkvmobile_runtime_t runtime, int model_id, const char * prompt);
int rwkvmobile_runtime_get_prompt(rwkvmobile_runtime_t runtime, int model_id, char * prompt, const int buf_len);
int rwkvmobile_runtime_gen_completion_async(rwkvmobile_runtime_t runtime, int model_id, const char * prompt, const int max_tokens, const int stop_code, void (*callback)(const char *, const int, const char *), int disable_cache);
int rwkvmobile_runtime_gen_completion_batch_async(rwkvmobile_runtime_t runtime, int model_id, const char ** prompts, const int batch_size, const int max_tokens, const int stop_code, void (*callback_batch)(const int, const char **, const int*, const char **), int disable_cache);
int rwkvmobile_runtime_eval_chat_batch_with_history_async(rwkvmobile_runtime_t handle, int model_id, const char *** inputs, const int * num_inputs,
    const int batch_size, const int max_tokens, void (*callback_batch)(const int, const char **, const int*, const char **),
    int enable_reasoning, int force_reasoning, int force_lang, int add_generation_prompt
);
struct supported_batch_sizes rwkvmobile_runtime_get_supported_batch_sizes(rwkvmobile_runtime_t runtime, int model_id);
void rwkvmobile_runtime_free_supported_batch_sizes(struct supported_batch_sizes sizes);
int rwkvmobile_runtime_gen_completion(rwkvmobile_runtime_t runtime, int model_id, const char * prompt, const int max_tokens, const int stop_code, void (*callback)(const char *, const int, const char *), int disable_cache);
const char ** rwkvmobile_runtime_gen_completion_singletoken_topk(rwkvmobile_runtime_t handle, int model_id, const char * prompt, const int top_k);
int rwkvmobile_runtime_clear_state(rwkvmobile_runtime_t runtime, int model_id);
int rwkvmobile_runtime_load_initial_state(rwkvmobile_runtime_t runtime, int model_id, const char * state_path);
void rwkvmobile_runtime_unload_initial_state(rwkvmobile_runtime_t runtime, int model_id, const char * state_path);
int rwkvmobile_runtime_save_history_to_state(rwkvmobile_runtime_t runtime, int model_id, const char ** history, const int num_history, const char * state_path);
int rwkvmobile_runtime_load_history_state_to_memory(rwkvmobile_runtime_t runtime, int model_id, const char * state_path);
struct sampler_params rwkvmobile_runtime_get_sampler_params(rwkvmobile_runtime_t runtime, int model_id);