examples/flutter/ffigen/rwkv_mobile.dart


late final _rwkvmobile_runtime_is_generatingPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int )>>('rwkvmobile_runtime_is_generating');
late final _rwkvmobile_runtime_is_generating = _rwkvmobile_runtime_is_generatingPtr.asFunction<int Function(rwkvmobile_runtime_t , int )>();

int rwkvmobile_runtime_set_prompt(rwkvmobile_runtime_t runtime,
int model_id,
ffi.Pointer<ffi.Char> prompt,
) {
  return _rwkvmobile_runtime_set_prompt(runtime,
model_id,
prompt,
);
}

late final _rwkvmobile_runtime_set_promptPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int , ffi.Pointer<ffi.Char> )>>('rwkvmobile_runtime_set_prompt');
late final _rwkvmobile_runtime_set_prompt = _rwkvmobile_runtime_set_promptPtr.asFunction<int Function(rwkvmobile_runtime_t , int , ffi.Pointer<ffi.Char> )>();

int rwkvmobile_runtime_get_prompt(rwkvmobile_runtime_t runtime,
int model_id,
ffi.Pointer<ffi.Char> prompt,
int buf_len,
) {
  return _rwkvmobile_runtime_get_prompt(runtime,
model_id,
prompt,
buf_len,
);
}

late final _rwkvmobile_runtime_get_promptPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int , ffi.Pointer<ffi.Char> , ffi.Int )>>('rwkvmobile_runtime_get_prompt');
late final _rwkvmobile_runtime_get_prompt = _rwkvmobile_runtime_get_promptPtr.asFunction<int Function(rwkvmobile_runtime_t , int , ffi.Pointer<ffi.Char> , int )>();

int rwkvmobile_runtime_gen_completion_async(rwkvmobile_runtime_t runtime,
int model_id,
ffi.Pointer<ffi.Char> prompt,
int max_tokens,
int stop_code,
ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char> , ffi.Int , ffi.Pointer<ffi.Char> )>> callback,
int disable_cache,
) {
  return _rwkvmobile_runtime_gen_completion_async(runtime,
model_id,
prompt,
max_tokens,
stop_code,
callback,
disable_cache,
);
}

late final _rwkvmobile_runtime_gen_completion_asyncPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int , ffi.Pointer<ffi.Char> , ffi.Int , ffi.Int , ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char> , ffi.Int , ffi.Pointer<ffi.Char> )>> , ffi.Int )>>('rwkvmobile_runtime_gen_completion_async');
late final _rwkvmobile_runtime_gen_completion_async = _rwkvmobile_runtime_gen_completion_asyncPtr.asFunction<int Function(rwkvmobile_runtime_t , int , ffi.Pointer<ffi.Char> , int , int , ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char> , ffi.Int , ffi.Pointer<ffi.Char> )>> , int )>();

int rwkvmobile_runtime_gen_completion_batch_async(rwkvmobile_runtime_t runtime,
int model_id,
ffi.Pointer<ffi.Pointer<ffi.Char>> prompts,
int batch_size,
int max_tokens,
int stop_code,
ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Int , ffi.Pointer<ffi.Pointer<ffi.Char>> , ffi.Pointer<ffi.Int> , ffi.Pointer<ffi.Pointer<ffi.Char>> )>> callback_batch,
int disable_cache,
) {
  return _rwkvmobile_runtime_gen_completion_batch_async(runtime,
model_id,
prompts,
batch_size,
max_tokens,
stop_code,
callback_batch,
disable_cache,
);
}

late final _rwkvmobile_runtime_gen_completion_batch_asyncPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int , ffi.Pointer<ffi.Pointer<ffi.Char>> , ffi.Int , ffi.Int , ffi.Int , ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Int , ffi.Pointer<ffi.Pointer<ffi.Char>> , ffi.Pointer<ffi.Int> , ffi.Pointer<ffi.Pointer<ffi.Char>> )>> , ffi.Int )>>('rwkvmobile_runtime_gen_completion_batch_async');
late final _rwkvmobile_runtime_gen_completion_batch_async = _rwkvmobile_runtime_gen_completion_batch_asyncPtr.asFunction<int Function(rwkvmobile_runtime_t , int , ffi.Pointer<ffi.Pointer<ffi.Char>> , int , int , int , ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Int , ffi.Pointer<ffi.Pointer<ffi.Char>> , ffi.Pointer<ffi.Int> , ffi.Pointer<ffi.Pointer<ffi.Char>> )>> , int )>();

int rwkvmobile_runtime_eval_chat_batch_with_history_async(rwkvmobile_runtime_t handle,
int model_id,
ffi.Pointer<ffi.Pointer<ffi.Pointer<ffi.Char>>> inputs,
ffi.Pointer<ffi.Int> num_inputs,
int batch_size,
int max_tokens,
ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Int , ffi.Pointer<ffi.Pointer<ffi.Char>> , ffi.Pointer<ffi.Int> , ffi.Pointer<ffi.Pointer<ffi.Char>> )>> callback_batch,
int enable_reasoning,
int force_reasoning,
int force_lang,
int add_generation_prompt,
) {
  return _rwkvmobile_runtime_eval_chat_batch_with_history_async(handle,
model_id,
inputs,
num_inputs,
batch_size,
max_tokens,
callback_batch,
enable_reasoning,
force_reasoning,
force_lang,
add_generation_prompt,
);
}

late final _rwkvmobile_runtime_eval_chat_batch_with_history_asyncPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int , ffi.Pointer<ffi.Pointer<ffi.Pointer<ffi.Char>>> , ffi.Pointer<ffi.Int> , ffi.Int , ffi.Int , ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Int , ffi.Pointer<ffi.Pointer<ffi.Char>> , ffi.Pointer<ffi.Int> , ffi.Pointer<ffi.Pointer<ffi.Char>> )>> , ffi.Int , ffi.Int , ffi.Int , ffi.Int )>>('rwkvmobile_runtime_eval_chat_batch_with_history_async');
late final _rwkvmobile_runtime_eval_chat_batch_with_history_async = _rwkvmobile_runtime_eval_chat_batch_with_history_asyncPtr.asFunction<int Function(rwkvmobile_runtime_t , int , ffi.Pointer<ffi.Pointer<ffi.Pointer<ffi.Char>>> , ffi.Pointer<ffi.Int> , int , int , ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Int , ffi.Pointer<ffi.Pointer<ffi.Char>> , ffi.Pointer<ffi.Int> , ffi.Pointer<ffi.Pointer<ffi.Char>> )>> , int , int , int , int )>();

supported_batch_sizes rwkvmobile_runtime_get_supported_batch_sizes(rwkvmobile_runtime_t runtime,
int model_id,
) {
  return _rwkvmobile_runtime_get_supported_batch_sizes(runtime,
model_id,
);
}

late final _rwkvmobile_runtime_get_supported_batch_sizesPtr = _lookup<
    ffi.NativeFunction<supported_batch_sizes Function(rwkvmobile_runtime_t , ffi.Int )>>('rwkvmobile_runtime_get_supported_batch_sizes');
late final _rwkvmobile_runtime_get_supported_batch_sizes = _rwkvmobile_runtime_get_supported_batch_sizesPtr.asFunction<supported_batch_sizes Function(rwkvmobile_runtime_t , int )>();

void rwkvmobile_runtime_free_supported_batch_sizes(supported_batch_sizes sizes,
) {
  return _rwkvmobile_runtime_free_supported_batch_sizes(sizes,
);
}

late final _rwkvmobile_runtime_free_supported_batch_sizesPtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(supported_batch_sizes )>>('rwkvmobile_runtime_free_supported_batch_sizes');
late final _rwkvmobile_runtime_free_supported_batch_sizes = _rwkvmobile_runtime_free_supported_batch_sizesPtr.asFunction<void Function(supported_batch_sizes )>();

int rwkvmobile_runtime_gen_completion(rwkvmobile_runtime_t runtime,
int model_id,
ffi.Pointer<ffi.Char> prompt,
int max_tokens,
int stop_code,
ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char> , ffi.Int , ffi.Pointer<ffi.Char> )>> callback,
int disable_cache,
) {
  return _rwkvmobile_runtime_gen_completion(runtime,
model_id,
prompt,
max_tokens,
stop_code,
callback,
disable_cache,
);
}

late final _rwkvmobile_runtime_gen_completionPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int , ffi.Pointer<ffi.Char> , ffi.Int , ffi.Int , ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char> , ffi.Int , ffi.Pointer<ffi.Char> )>> , ffi.Int )>>('rwkvmobile_runtime_gen_completion');
late final _rwkvmobile_runtime_gen_completion = _rwkvmobile_runtime_gen_completionPtr.asFunction<int Function(rwkvmobile_runtime_t , int , ffi.Pointer<ffi.Char> , int , int , ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char> , ffi.Int , ffi.Pointer<ffi.Char> )>> , int )>();

ffi.Pointer<ffi.Pointer<ffi.Char>> rwkvmobile_runtime_gen_completion_singletoken_topk(rwkvmobile_runtime_t handle,
int model_id,
ffi.Pointer<ffi.Char> prompt,
int top_k,
) {
  return _rwkvmobile_runtime_gen_completion_singletoken_topk(handle,
model_id,
prompt,
top_k,
);
}

late final _rwkvmobile_runtime_gen_completion_singletoken_topkPtr = _lookup<
    ffi.NativeFunction<ffi.Pointer<ffi.Pointer<ffi.Char>> Function(rwkvmobile_runtime_t , ffi.Int , ffi.Pointer<ffi.Char> , ffi.Int )>>('rwkvmobile_runtime_gen_completion_singletoken_topk');
late final _rwkvmobile_runtime_gen_completion_singletoken_topk = _rwkvmobile_runtime_gen_completion_singletoken_topkPtr.asFunction<ffi.Pointer<ffi.Pointer<ffi.Char>> Function(rwkvmobile_runtime_t , int , ffi.Pointer<ffi.Char> , int )>();

int rwkvmobile_runtime_clear_state(rwkvmobile_runtime_t runtime,
int model_id,
) {
  return _rwkvmobile_runtime_clear_state(runtime,
model_id,
);
}

late final _rwkvmobile_runtime_clear_statePtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int )>>('rwkvmobile_runtime_clear_state');
late final _rwkvmobile_runtime_clear_state = _rwkvmobile_runtime_clear_statePtr.asFunction<int Function(rwkvmobile_runtime_t , int )>();

int rwkvmobile_runtime_load_initial_state(rwkvmobile_runtime_t runtime,
int model_id,
ffi.Pointer<ffi.Char> state_path,
) {
  return _rwkvmobile_runtime_load_initial_state(runtime,
model_id,
state_path,
);
}

late final _rwkvmobile_runtime_load_initial_statePtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int , ffi.Pointer<ffi.Char> )>>('rwkvmobile_runtime_load_initial_state');
late final _rwkvmobile_runtime_load_initial_state = _rwkvmobile_runtime_load_initial_statePtr.asFunction<int Function(rwkvmobile_runtime_t , int , ffi.Pointer<ffi.Char> )>();

void rwkvmobile_runtime_unload_initial_state(rwkvmobile_runtime_t runtime,
int model_id,
ffi.Pointer<ffi.Char> state_path,
) {
  return _rwkvmobile_runtime_unload_initial_state(runtime,
model_id,
state_path,
);
}

late final _rwkvmobile_runtime_unload_initial_statePtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(rwkvmobile_runtime_t , ffi.Int , ffi.Pointer<ffi.Char> )>>('rwkvmobile_runtime_unload_initial_state');
late final _rwkvmobile_runtime_unload_initial_state = _rwkvmobile_runtime_unload_initial_statePtr.asFunction<void Function(rwkvmobile_runtime_t , int , ffi.Pointer<ffi.Char> )>();

int rwkvmobile_runtime_save_history_to_state(rwkvmobile_runtime_t runtime,
int model_id,
ffi.Pointer<ffi.Pointer<ffi.Char>> history,
int num_history,
ffi.Pointer<ffi.Char> state_path,
) {
  return _rwkvmobile_runtime_save_history_to_state(runtime,
model_id,
history,
num_history,
state_path,
);
}

late final _rwkvmobile_runtime_save_history_to_statePtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int , ffi.Pointer<ffi.Pointer<ffi.Char>> , ffi.Int , ffi.Pointer<ffi.Char> )>>('rwkvmobile_runtime_save_history_to_state');
late final _rwkvmobile_runtime_save_history_to_state = _rwkvmobile_runtime_save_history_to_statePtr.asFunction<int Function(rwkvmobile_runtime_t , int , ffi.Pointer<ffi.Pointer<ffi.Char>> , int , ffi.Pointer<ffi.Char> )>();

int rwkvmobile_runtime_load_history_state_to_memory(rwkvmobile_runtime_t runtime,
int model_id,
ffi.Pointer<ffi.Char> state_path,
) {
  return _rwkvmobile_runtime_load_history_state_to_memory(runtime,
model_id,
state_path,
);
}

late final _rwkvmobile_runtime_load_history_state_to_memoryPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int , ffi.Pointer<ffi.Char> )>>('rwkvmobile_runtime_load_history_state_to_memory');
late final _rwkvmobile_runtime_load_history_state_to_memory = _rwkvmobile_runtime_load_history_state_to_memoryPtr.asFunction<int Function(rwkvmobile_runtime_t , int , ffi.Pointer<ffi.Char> )>();

sampler_params rwkvmobile_runtime_get_sampler_params(rwkvmobile_runtime_t runtime,
int model_id,
) {
  return _rwkvmobile_runtime_get_sampler_params(runtime,
model_id,
);
}
